--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5632]
+[INFO]  [/sys/router] main memory [total=>5760]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
@@ -997,8 +997,8 @@ For example, `*<0>` references the first argument, `*<1>` the second argument, s
 ++++
 <!-- 🐖 ./main_runner.out
 band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
-3.band(2,8)                           --- <1>
-10.band(2,8)                          --- <3>
+3.band(2,8)                                --- <1>
+10.band(2,8)                               --- <2>
 -->
 ++++
 
@@ -1007,9 +1007,9 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 ==>band?int{?}<=int(_,_)
 	[band?int{?}<=int[is(and([gte(from(0)),lte(from(1))]))]]
-fhatos> 3.band(2,8)                           // <1>
+fhatos> 3.band(2,8)                                // <1>
 ==>3
-fhatos> 10.band(2,8)                          // <3>
+fhatos> 10.band(2,8)                               // <2>
 ----
 
 ++++
@@ -1030,15 +1030,14 @@ named args::
 \tt{obj}_\tt{in}.f(\color{yellow}{a_1} \Rightarrow x, \color{yellow}{a_2} \Rightarrow y,\ldots,a_n) \mapsto \tt{obj}_\tt{out}
 ++++
 
-A https://en.wikipedia.org/wiki/Named_parameter[named argument] denotes a fURI that references an `obj` in the router's frame structure.
+A https://en.wikipedia.org/wiki/Named_parameter[named argument] is a fURI that references an `obj` in the router's frame structure.
 
 ++++
 <!-- 🐖 ./main_runner.out
 band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
 3.band(2,8)                           --- <1>
 3.band(max=>8,min=>2)                 --- <2>
-10.band(2,max=>8)                     --- <3>
-'abc'.band(2,8)                       --- <4>
+'abc'.band(2,8)                       --- <3>
 -->
 ++++
 
@@ -1051,9 +1050,7 @@ fhatos> 3.band(2,8)                           // <1>
 ==>3
 fhatos> 3.band(max=>8,min=>2)                 // <2>
 ==>3
-fhatos> 10.band(2,max=>8)                     // <3>
-==>band
-fhatos> 'abc'.band(2,8)                       // <4>
+fhatos> 'abc'.band(2,8)                       // <3>
 [ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_] 
 		 \_/mmadt/int is not a subtype of /mmadt/str
 	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]] [min=>2,max=>8]
@@ -1065,8 +1062,7 @@ fhatos> 'abc'.band(2,8)                       // <4>
 
 <1> If the argument name isn't provided, then it's position in the argument list determines its nane,
 <2> When arguments are named, they can be written in any order.
-<3> Named arguments and unnamed arguments can be used together.
-<4> The domain of `band` is `int`. Note where the error is thrown when `str['abc']` is provided.
+<3> The domain of `band` is `int`. Note where the error is thrown when `str['abc']` is provided.
 
 --
 
@@ -1527,22 +1523,6 @@ fhatos> thread::create(loop=>||(
 ==>halt=>true
 >]
 fhatos> @t.spawn()
-[INFO]  [t] thread spawned: from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n') [stack size:16192]
-c: 0
-c: 1
-c: 2
-c: 3
-c: 4
-c: 5
-c: 6
-c: 7
-c: 8
-c: 9
-c: 10
-c: 11
-[INFO]  [t] thread stopped
-fhatos> *c
-==>12
 ----
 
 ++++
@@ -2314,11 +2294,6 @@ fhatos> nat[6]
 fhatos> nat[-6]
 [ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 fhatos> nat[3].plus(2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a int as defined by [int][_] 
-		 \_/mmadt/obj is not a subtype of /mmadt/int
-fhatos> nat[3].mult(-2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -2 is not a int as defined by [int][_] 
-		 \_/mmadt/obj is not a subtype of /mmadt/int
 ----
 
 ++++
