--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5504]
+[INFO]  [/sys/router] main memory [total=>5760]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
@@ -519,7 +519,6 @@ fhatos> # -> noobj
 [INFO]  [/sys/router] 1 dsm(s) closing
 [INFO]  [/sys/router] 1 fs(s) closing
 [INFO]  [/sys/router] 7 heap(s) closing
-[INFO]  [/sys/router] router /sys/router stopped
 ----
 
 ++++
@@ -868,9 +867,9 @@ fhatos> @a + @b
 [ERROR] [/sys/scheduler] [/sys/lang/parser] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))] 
 	  thrown at inst char['a']@a => plus(char['a']@a)[cpp] [0=>char['a']@a]
 fhatos> *a
-==>char['a']@a
-fhatos> @a.as(str) + @b
 ==>'aa'@a
+fhatos> @a.as(str) + @b
+==>'aaaa'@a
 ----
 
 ++++
@@ -999,11 +998,12 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
-==>band?int{?}<=int(_,_)
-	[band?int{?}<=int[is(and([gte(from(0)),lte(from(1))]))]]
+==>band?intnoobj<=int(_,_)
+	[band[is(and([gte(from(0)),lte(from(1))]))]]
 fhatos> 3.band(2,8)                                // <1>
 ==>3
 fhatos> 10.band(2,8)                               // <2>
+[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of band(2,8)[band[is(and([gte(from(0)),lte(from(1))]))]] [SIGNATURE HERE]
 ----
 
 ++++
@@ -1038,8 +1038,8 @@ band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
-==>band?int{?}<=int(min=>_,max=>_)
-	[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]]
+==>band?intnoobj<=int(min=>_,max=>_)
+	[band[is(and([gte(from(min)),lte(from(max))]))]]
 fhatos> 3.band(2,8)                           // <1>
 ==>3
 fhatos> 3.band(max=>8,min=>2)                 // <2>
@@ -1047,7 +1047,7 @@ fhatos> 3.band(max=>8,min=>2)                 // <2>
 fhatos> 'abc'.band(2,8)                       // <3>
 [ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_] 
 		 \_/mmadt/int is not a subtype of /mmadt/str
-	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]] [min=>2,max=>8]
+	  thrown at inst 'abc' => band(min=>2,max=>8)[band[is(and([gte(from(min)),lte(from(max))]))]] [min=>2,max=>8]
 ----
 
 ++++
@@ -1084,15 +1084,14 @@ band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)]))]
-==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
-	[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]]
+==>band?intnoobj<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
+	[band[is(and([gte(from(min)),lte(from(max))]))]]
 fhatos> 1.band(min=>1)                        // <1>
 ==>1
 fhatos> 10.band()                             // <2>
 ==>10
 fhatos> {2,3,4,5}.band(min=>3,max=>4)         // <3>
-==>3
-==>4
+[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of band(min=>3,max=>4)[band[is(and([gte(from(min)),lte(from(max))]))]] [SIGNATURE HERE]
 ----
 
 ++++
@@ -1193,8 +1192,8 @@ band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*m
 [source,mmadt]
 ----
 fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
-==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj...
-	[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]]
+==>band?intnoobj<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
+	[band[is(gte(from(min))).is(lte(from(max)))]]
 fhatos> 2.band(min=>1,max=>1)                 // <1>
 [ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/plus inst unresolved 
 	         lhs id      inst id        resolve obj        
@@ -1224,7 +1223,7 @@ is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').ma
 [source,mmadt]
 ----
 fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').map(1)))[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=obj(0)[noobj])[noobj].else?noobj<=obj(print?noobj<=obj('error')[noobj].map?noobj<=...
+==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=obj(0)[noobj])[noobj].else?noobj<=obj(print?noobj<=obj('error')[noobj].map?noobj<=obj(1)[noobj])[noobj])
 	[is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
 error==>true
@@ -1511,28 +1510,11 @@ fhatos> thread::create(loop=>||(
           plus(1).to(c).
           gt(10).to(t/halt).
           is(_).print('\n'))).to(|t)
->thread[
-==>loop=>from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n')
-==>delay=>nat[0]
-==>halt=>true
->]
+==>thread/::/create
 fhatos> @t.spawn()
-[INFO]  [t] thread spawned: from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n') [stack size:16192]
-c: 0
-c: 1
-c: 2
-c: 3
-c: 4
-c: 5
-c: 6
-c: 7
-c: 8
-c: 9
-c: 10
-c: 11
-[INFO]  [t] thread stopped
+[ERROR] [/sys/scheduler] [/mmadt/noobj] spawn inst unresolved 
+	         lhs id  inst id    resolve obj
 fhatos> *c
-==>12
 ----
 
 ++++
@@ -1903,9 +1885,7 @@ However, what makes
 [source,mmadt]
 ----
 fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
 ----
 
 ++++
@@ -1928,13 +1908,9 @@ For instance, `if` is implemented with a two entry `rec`, where one entry maps t
 fhatos> /io/console/config/nest -> 0                  // <1>
 ==>0
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
 ----
 
 ++++
@@ -1978,14 +1954,14 @@ fhatos> {1,2,3}-|[
           is(gt(2)) => mult(-1),      // <1>
           _         => mult(100)]     // <2>
 ==>1
-==>2
-==>3
 fhatos> {1,2,3}-|[                           
           is(gt(2)) => mult(-1),             
           _         => mult(100)]>-
-==>100
-==>200
-==>-3
+[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
+          is(gt(2)) => mult(-1),             
+          _         => mult(100)]>-')[cpp] [code=>'1-|[                           
+          is(gt(2)) => mult(-1),             
+          _         => mult(100)]>-']
 ----
 
 ++++
@@ -2026,26 +2002,17 @@ fhatos> {1,2,3}-<[
 ==>is(gt(1))=>noobj
 ==>is(gt(2))=>noobj
 >]
->[
-==>is(gt(0))=>-2
-==>is(gt(1))=>0
-==>is(gt(2))=>noobj
->]
->[
-==>is(gt(0))=>-3
-==>is(gt(1))=>0
-==>is(gt(2))=>3
->]
 fhatos> {1,2,3}-<[                 
           is(gt(0)) => mult(-1),   
           is(gt(1)) => mult(0),    
           is(gt(2)) => _]>-
-==>-1
-==>-2
-==>0
-==>-3
-==>0
-==>3
+[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(0)) accessed as uri
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
+          is(gt(2)) => _]>-')[cpp] [code=>'1-<[                 
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
+          is(gt(2)) => _]>-']
 ----
 
 ++++
@@ -2068,8 +2035,6 @@ guard::
 ----
 fhatos> {1,2,3}.[
 ==>1
-==>2
-==>3
 ----
 
 ++++
@@ -2169,23 +2134,122 @@ fhatos> [a=>1,b=>2].b     // <5>
 <4> `lst\[[1,2,3]]` applied to the `uri[1]`.
 <5> `rec\[[a=>1,b=>2]]` applied to the `uri[b]`.
 
-[.small]
-[.center]
-[cols="1,1,1,1,1,1,1,1,1,1,1",width=75%]
+[.small][.center]
+[cols="1,1,1,1,1,1,1,1,1,1,1",width=85%]
 |===
-|  X   | noobj | bool | int | real | str | uri | lst | rec | inst | bcode
-|noobj |    x  |  y   |    z| a    |  b  |  c  |  d  |  e  |  f   |  g
-|bool  |    x  |   y  |   z |  a   |   b |   c |   d |   e |   f  |   g
-|int   |     x |  y   |  z  |   a  | b   | c   |  d  | e   |  f   |    g
-|real  |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|str   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|uri   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|lst   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|rec   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|inst  |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|bcode |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
+|`lhs=>rhs`|`=>noobj` |`=>bool`|`=>int`|`=>real`|`=>str` |`=>uri`  |`=>lst`|`=>rec`|`=>inst`|`=>bcode`
+|`noobj=>` |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`bool=>`  |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`int=>`   |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`real=>`  |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`str=>`   |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`uri=>`   |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`lst=>`   |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`[<r>]` |`r`    |`r`       |`l(r)`  |`l=>r`
+|`rec=>`   |`r`       |`r`     |`r`    |`r`     |`'r{l}'`|`lk=>rv`|`r`    |`[rk=>(lv=>rv)]`    |`l(r)`  |`l=>r`
+|`inst=>`  |`l(noobj)`|`l(r)`  |`l(r)` |`l(r)`  |`'r{l}'`|`r`     |`r`    |`r`    |`l(r)`  |`l=>r`
+|`bcode=>` |`noobj.r` |`l.r`  |`l.r` |`l.r`     |`'r{l}'`|`l.r`   |`l.r`  |`r`    |`l(r)`  |`l=>r`
+|===
 
-|===
+[tabs]
+====
+noobj::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+noobj.noobj
+noobj.true
+noobj.6
+noobj.real[3.14]
+noobj.'text {_}'
+noobj.a/b/c
+noobj.[1,2,3]
+noobj.[noobj=>1]
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> noobj.noobj
+fhatos> noobj.true
+==>true
+fhatos> noobj.6
+==>6
+fhatos> noobj.real[3.14]
+==>3.140000
+fhatos> noobj.'text'
+==>'text'
+fhatos> noobj.a/b/c
+==>a/b/c
+fhatos> noobj.[1,2,3]
+>[
+==>1
+==>2
+==>3
+>]
+fhatos> noobj.[noobj=>1]
+>[
+>]
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+bool::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+true.noobj
+false.true
+false.6
+true.real[3.14]
+false.'text {_}'
+true.a/b/c
+false.[1,2,3]
+true.[false=>0,true=>1]
+true.i?bool<=bool(_)[and(_,*<0>)]
+true.plus(false)
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> true.noobj
+fhatos> false.true
+==>true
+fhatos> false.6
+==>6
+fhatos> true.real[3.14]
+==>3.140000
+fhatos> false.'text {_}'
+==>'text console[[delay=>nat[0],loop=>inst()[cpp],halt=>false,config=>[processor=>/sys/vm,nest=>2,ellipsis=>50,prompt=>'
+fhatos> true.a/b/c
+==>a/b/c
+fhatos> false.[1,2,3]
+>[
+==>1
+==>2
+==>3
+>]
+fhatos> true.[true=>1,false=2]
+>[
+==>true=>1
+>]
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+
+====
+
 
 ==== Values
 
@@ -2218,7 +2282,7 @@ a -> age[45]
 [source,mmadt]
 ----
 fhatos> age -> \|(is(gt(0)).is(lt(120)))
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=o...
+==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
 fhatos> a -> age[45]
 ==>age[45]
 fhatos> *a.inspect()
